--- a/templates/template_thesisdown.tex
+++ b/templates/template_thesisdown.tex
@@ -171,7 +171,7 @@ $dedication$
 }
 
 \Preface{
-$preface$
+$prefacio$
 }
 
 \Abstract{
@@ -181,6 +181,8 @@ $abstract$
 $for(header-includes)$
 	$header-includes$
 $endfor$
+
+\renewcommand{\baselinestretch}{1.5}
 % End of CII addition
 %%
 %% End Preamble
@@ -188,6 +190,7 @@ $endfor$
 %
 \let\chaptername\relax
 \begin{document}
+\raggedbottom
 \bibliographystyle{apa-good}
 % Everything below added by CII
 $if(title)$
@@ -195,7 +198,7 @@ $if(title)$
 $endif$
 
 \frontmatter % this stuff will be roman-numbered
-\pagestyle{empty} % this removes page numbers from the frontmatter
+ \pagestyle{empty} 
 
 $if(acknowledgements)$
   \begin{acknowledgements}
@@ -203,27 +206,31 @@ $if(acknowledgements)$
   \end{acknowledgements}
 $endif$
 
-$if(preface)$
-  \begin{preface}
-    $preface$
-  \end{preface}
+$if(prefacio)$
+  \begin{prefacio}
+  \thispagestyle{empty}
+    $prefacio$
+  \end{prefacio}
 $endif$
 
 $if(toc)$
-%  \hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$black$endif$}
+%  \hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$black$endif$}}
   \setcounter{tocdepth}{$toc-depth$}
   \setlength{\parskip}{0pt}
   \tableofcontents
+  \thispagestyle{empty}
 $endif$
 
 \setlength\parskip{1em plus 0.1em minus 0.2em}
 
 $if(lot)$
   \listoftables
+  \thispagestyle{empty}
 $endif$
 
 $if(lof)$
   \listoffigures
+  \thispagestyle{empty}
 $endif$
 
 $if(abstract)$
@@ -247,10 +254,14 @@ $body$
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % %%% Bibliography                              %%%
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \addtocontents{toc}{\vspace{.5\baselineskip}}
-% \cleardoublepage
-% \phantomsection
-% \addcontentsline{toc}{chapter}{\protect\numberline{}{Bibliography}}
+%\addtocontents{toc}{\vspace{.9\baselineskip}}
+
+\cleardoublepage
+\pagestyle{fancyplain}
+\fancyhf{}
+	 \fancyhead[RE]{\slshape Bibliografía}
+\phantomsection
+\addcontentsline{toc}{chapter}{{Bibliografía}}
 \bibliography{tesis}
 
 %% All books from our library (SfS) are already in a BiBTeX file
